[gd_scene load_steps=33 format=3 uid="uid://l3yji6t2u1gr"]

[ext_resource type="Script" path="res://Scripts/World.gd" id="1_tym0h"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2_qj4if"]
[ext_resource type="PackedScene" uid="uid://dhudi52kk631y" path="res://Scenes/Gun.tscn" id="3_3bviw"]
[ext_resource type="Script" path="res://Scripts/Screenshake.gd" id="3_q8e5j"]
[ext_resource type="Script" path="res://Scripts/StencilBlocker.gd" id="3_xun6q"]
[ext_resource type="PackedScene" uid="uid://bms56id7q1i6s" path="res://Scenes/Destroyer.tscn" id="4_7gymc"]
[ext_resource type="Script" path="res://Scripts/StencilCamera.gd" id="5_2wm62"]
[ext_resource type="PackedScene" uid="uid://dbqp5qmntilfy" path="res://Scenes/Turret.tscn" id="5_4ub5r"]
[ext_resource type="Shader" path="res://Shaders/StencilShader.gdshader" id="5_o6mk8"]
[ext_resource type="Texture2D" uid="uid://d3radhj6uixps" path="res://Textures/Crosshair/crosshair161.png" id="6_wvhx6"]
[ext_resource type="Script" path="res://Scripts/PortalCamera.gd" id="7_ft6rt"]
[ext_resource type="PackedScene" uid="uid://cay7ruc864d07" path="res://Scenes/fps_counter.tscn" id="8_3nm1p"]
[ext_resource type="PackedScene" uid="uid://chuu1cjlrp7p7" path="res://Scenes/Portal.tscn" id="12_msyrq"]
[ext_resource type="Script" path="res://Scripts/MapMazeGen.gd" id="13_hprkg"]
[ext_resource type="ArrayOccluder3D" uid="uid://d34l3wnjclrv1" path="res://World.occ" id="15_if7jw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3y4ak"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ale1i"]
sky_material = SubResource("ProceduralSkyMaterial_3y4ak")

[sub_resource type="Environment" id="Environment_088vp"]
background_mode = 2
sky = SubResource("Sky_ale1i")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_6ipjk"]
vertices = PackedVector3Array(-6.43472, 8.21823, -20.644, -4.93472, 8.21823, -20.894, -4.18472, 8.21823, -22.144, -5.30972, 8.46823, -21.394, -7.68472, 8.21823, -23.144, -7.68472, 8.21823, -21.644, -6.43472, 8.21823, -20.644, -4.18472, 8.21823, -22.144, -5.18472, 7.96823, -24.644, -7.18472, 7.96823, -24.394, -5.30972, 8.46823, -21.394, -4.68472, 8.21823, -23.394, -6.70972, 8.46823, -23.169, -0.684715, 0.46823, -8.39395, 0.0652847, 0.46823, -8.64395, 0.0652847, 0.46823, -14.644, -14.6847, 0.46823, -14.644, -14.6847, 0.46823, 6.35605, -0.684715, 0.46823, 6.35605, -0.684715, 0.46823, -8.39395, -14.6847, 0.46823, -14.644, 0.815285, 0.46823, 0.106049, 2.81528, 0.46823, 0.106049, 3.81528, 0.46823, -2.89395, 0.815285, 0.46823, -8.39395, 0.815285, 0.46823, -8.39395, 4.81528, 0.46823, -3.89395, 6.31528, 0.46823, -4.14395, 6.31528, 0.46823, -14.644, 0.0652847, 0.46823, -14.644, 0.815285, 0.46823, -8.39395, 3.81528, 0.46823, -2.89395, 4.81528, 0.46823, -3.89395, 0.0652847, 0.46823, -14.644, 0.0652847, 0.46823, -8.64395, 0.815285, 0.46823, -8.39395, 3.56528, 0.46823, 2.60605, 2.81528, 0.46823, 0.106049, 0.815285, 0.46823, 0.106049, 0.565285, 0.46823, 8.60605, 8.56528, 0.46823, 3.85605, 0.565285, 0.46823, 8.60605, -14.6847, 0.46823, 584.606, 584.565, 0.46823, 584.606, 584.565, 0.46823, -14.644, 5.31528, 0.46823, 3.85605, 3.56528, 0.46823, 2.60605, 0.565285, 0.46823, 8.60605, 8.56528, 0.46823, 3.85605, 5.31528, 0.46823, 3.85605, 0.565285, 0.46823, 8.60605, 6.31528, 0.46823, -14.644, 6.31528, 0.46823, -4.14395, 8.31528, 0.46823, -4.14395, 6.31528, 0.46823, -14.644, 8.31528, 0.46823, -4.14395, 10.0653, 0.46823, -2.64395, -0.684715, 0.46823, 8.35605, -0.684715, 0.46823, 6.35605, -14.6847, 0.46823, 6.35605, 6.31528, 0.46823, -14.644, 10.0653, 0.46823, -2.64395, 10.8153, 0.46823, -1.14395, 584.565, 0.46823, -14.644, 0.565285, 0.46823, 8.60605, -0.684715, 0.46823, 8.35605, -14.6847, 0.46823, 6.35605, -14.6847, 0.46823, 584.606, 584.565, 0.46823, -14.644, 10.3153, 0.46823, 2.35605, 8.56528, 0.46823, 3.85605, 584.565, 0.46823, -14.644, 10.8153, 0.46823, -1.14395, 10.3153, 0.46823, 2.35605, -20.6847, 7.71823, -11.144, -20.9347, 7.71823, -12.644, -22.1847, 7.71823, -13.644, -25.1847, 7.71823, -9.89395, -23.4347, 7.71823, -8.89395, -21.9347, 7.71823, -9.14395, -22.1847, 7.71823, -13.644, -24.1847, 7.71823, -13.644, -25.4347, 7.71823, -12.144, -25.1847, 7.71823, -9.89395, -21.9347, 7.71823, -9.14395, -20.6847, 7.71823, -11.144, -23.2097, 8.21823, -12.669, 8.31528, 0.46823, 1.10605, 9.06528, 0.46823, 0.106049, 9.06528, 0.46823, -1.39395, 5.31528, 0.46823, -2.14395, 4.56528, 0.46823, -1.14395, 5.06528, 0.46823, 0.856049, 5.06528, 0.46823, 0.856049, 6.31528, 0.46823, 1.60605, 8.31528, 0.46823, 1.10605, 9.06528, 0.46823, -1.39395, 7.31528, 0.46823, -2.64395, 5.31528, 0.46823, -2.14395, 5.31528, 8.46823, 1.10605, 6.31528, 8.46823, 1.85605, 7.31528, 8.46823, 1.85605, 8.31528, 8.46823, -1.39395, 7.56528, 8.21823, -2.14395, 6.31528, 8.21823, -2.14395, 5.06528, 8.46823, -0.393951, 5.31528, 8.46823, 1.10605, 7.31528, 8.46823, 1.85605, 8.56528, 8.46823, 0.856049, 8.31528, 8.46823, -1.39395, 6.31528, 8.21823, -2.14395, 6.79028, 8.96823, -0.668951)
polygons = [PackedInt32Array(2, 1, 3), PackedInt32Array(3, 1, 0), PackedInt32Array(8, 12, 9), PackedInt32Array(9, 12, 4), PackedInt32Array(4, 12, 5), PackedInt32Array(5, 10, 6), PackedInt32Array(10, 11, 7), PackedInt32Array(11, 12, 8), PackedInt32Array(12, 10, 5), PackedInt32Array(10, 12, 11), PackedInt32Array(14, 13, 15), PackedInt32Array(15, 13, 16), PackedInt32Array(18, 17, 19), PackedInt32Array(19, 17, 20), PackedInt32Array(22, 21, 23), PackedInt32Array(23, 21, 24), PackedInt32Array(26, 25, 27), PackedInt32Array(27, 25, 29), PackedInt32Array(27, 29, 28), PackedInt32Array(32, 31, 30), PackedInt32Array(35, 34, 33), PackedInt32Array(37, 36, 38), PackedInt32Array(38, 36, 39), PackedInt32Array(41, 40, 42), PackedInt32Array(42, 40, 43), PackedInt32Array(43, 40, 44), PackedInt32Array(47, 46, 45), PackedInt32Array(50, 49, 48), PackedInt32Array(53, 52, 51), PackedInt32Array(56, 55, 54), PackedInt32Array(59, 58, 57), PackedInt32Array(61, 60, 62), PackedInt32Array(62, 60, 63), PackedInt32Array(65, 64, 66), PackedInt32Array(66, 64, 67), PackedInt32Array(70, 69, 68), PackedInt32Array(73, 72, 71), PackedInt32Array(76, 75, 74), PackedInt32Array(79, 78, 77), PackedInt32Array(84, 86, 85), PackedInt32Array(85, 86, 80), PackedInt32Array(80, 86, 81), PackedInt32Array(81, 86, 82), PackedInt32Array(82, 86, 83), PackedInt32Array(83, 86, 84), PackedInt32Array(89, 88, 87), PackedInt32Array(92, 91, 90), PackedInt32Array(94, 93, 95), PackedInt32Array(95, 93, 96), PackedInt32Array(96, 93, 97), PackedInt32Array(97, 93, 98), PackedInt32Array(101, 100, 99), PackedInt32Array(104, 103, 102), PackedInt32Array(109, 111, 110), PackedInt32Array(110, 111, 105), PackedInt32Array(105, 111, 106), PackedInt32Array(106, 111, 107), PackedInt32Array(107, 111, 108), PackedInt32Array(108, 111, 109)]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_12j7t"]
radius = 0.75
height = 4.8

[sub_resource type="FastNoiseLite" id="FastNoiseLite_1pqde"]
frequency = 0.05
fractal_octaves = 4
fractal_gain = 0.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c7w40"]
radius = 1.18722
height = 5.0847

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d5oia"]
radius = 1.35263
height = 5.65913

[sub_resource type="Environment" id="Environment_clm5q"]
background_mode = 1
background_energy_multiplier = 0.0

[sub_resource type="ViewportTexture" id="ViewportTexture_7sfqx"]
viewport_path = NodePath("Map/NavigationRegion3D/Player/StencilViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_scqox"]
resource_local_to_scene = true
shader = ExtResource("5_o6mk8")
shader_parameter/stencil_tex = SubResource("ViewportTexture_7sfqx")

[sub_resource type="ViewportTexture" id="ViewportTexture_2ow2d"]
viewport_path = NodePath("Map/NavigationRegion3D/Player/PortalViewport")

[sub_resource type="BoxMesh" id="BoxMesh_41gfq"]
size = Vector3(0.177, 3.034, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b45cf"]
albedo_color = Color(0, 1, 1, 1)
metallic = 1.0
metallic_specular = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dxy0f"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_4ogn2"]
size = Vector3(153, 1, 188)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oglck"]
albedo_color = Color(1, 0, 1, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_tym0h")

[node name="Map" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Map"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
visible = false
light_cull_mask = 4293918721
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Map"]
environment = SubResource("Environment_088vp")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Map"]
navigation_mesh = SubResource("NavigationMesh_6ipjk")

[node name="CSGSphere3D" type="CSGSphere3D" parent="Map/NavigationRegion3D" groups=["projectile"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.1409, 2.38052, -11.3779)
layers = 17
use_collision = true
collision_layer = 3
collision_mask = 3
radius = 5.62853

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.064476, 0)
layers = 2

[node name="Player" type="CharacterBody3D" parent="Map/NavigationRegion3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -59.7646, -0.147188, 83.0106)
collision_layer = 3
collision_mask = 0
script = ExtResource("2_qj4if")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/NavigationRegion3D/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.170116, 2.10211, -0.175439)
mesh = SubResource("CapsuleMesh_12j7t")

[node name="Head" type="Area3D" parent="Map/NavigationRegion3D/Player" groups=["player"]]
script = ExtResource("3_q8e5j")
noise = SubResource("FastNoiseLite_1pqde")

[node name="Camera3D" type="Camera3D" parent="Map/NavigationRegion3D/Player/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.03755, 0.0830126)
cull_mask = 1048559

[node name="Gun" parent="Map/NavigationRegion3D/Player/Head/Camera3D" instance=ExtResource("3_3bviw")]
transform = Transform3D(0.248806, -0.00527947, 0.0238234, 0.00783289, 0.248441, -0.0267483, -0.0231101, 0.027367, 0.247421, 0.339471, -0.248334, -0.401797)

[node name="RayCast3D" type="RayCast3D" parent="Map/NavigationRegion3D/Player/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.73309)
target_position = Vector3(0, 0, 0)
collision_mask = 2
collide_with_areas = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/NavigationRegion3D/Player/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.170116, 2.66693, -0.175439)
shape = SubResource("CapsuleShape3D_c7w40")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/NavigationRegion3D/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.170116, 2.53163, -0.175439)
shape = SubResource("CapsuleShape3D_d5oia")

[node name="StencilViewport" type="SubViewport" parent="Map/NavigationRegion3D/Player"]
screen_space_aa = 1
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="StencilCamera" type="Camera3D" parent="Map/NavigationRegion3D/Player/StencilViewport"]
cull_mask = 16
environment = SubResource("Environment_clm5q")
script = ExtResource("5_2wm62")
main_cam_path = NodePath("../../Head/Camera3D")

[node name="PortalViewport" type="SubViewport" parent="Map/NavigationRegion3D/Player"]
screen_space_aa = 1
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="PortalCamera" type="Camera3D" parent="Map/NavigationRegion3D/Player/PortalViewport"]
cull_mask = 1048559
script = ExtResource("7_ft6rt")

[node name="TextureRect" type="TextureRect" parent="Map/NavigationRegion3D/Player"]
material = SubResource("ShaderMaterial_scqox")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_2ow2d")

[node name="Turret" parent="Map/NavigationRegion3D" instance=ExtResource("5_4ub5r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.2767, 0, 0)
collision_layer = 3
collision_mask = 3

[node name="Destroyer" parent="Map/NavigationRegion3D" instance=ExtResource("4_7gymc")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -22.0644, 0, 0)

[node name="Portal" parent="Map/NavigationRegion3D" instance=ExtResource("12_msyrq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.85633, 2.59585, -0.699267)

[node name="Portal2" parent="Map/NavigationRegion3D" instance=ExtResource("12_msyrq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.98082, 2.21823, -23.22)
current = false
other_portal_path = NodePath("../Portal")

[node name="StencilBlockBox" type="CSGBox3D" parent="Map/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0068059, 1.21159, -0.00742435)
use_collision = true
size = Vector3(0.18, 3.1, 16.2)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/NavigationRegion3D/StencilBlockBox"]
mesh = SubResource("BoxMesh_41gfq")
surface_material_override/0 = SubResource("StandardMaterial3D_b45cf")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Map/NavigationRegion3D/StencilBlockBox"]
visible = false
layers = 16
mesh = SubResource("BoxMesh_41gfq")
script = ExtResource("3_xun6q")

[node name="Floor" type="CSGBox3D" parent="Map/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 285, -0.45, 285)
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(600, 1, 600)
material = SubResource("StandardMaterial3D_dxy0f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Map/NavigationRegion3D/Floor" groups=["projectile"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
layers = 3
mesh = SubResource("BoxMesh_4ogn2")
surface_material_override/0 = SubResource("StandardMaterial3D_oglck")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Map/NavigationRegion3D/Floor" groups=["projectile"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, 0)
visible = false
layers = 16
mesh = SubResource("BoxMesh_4ogn2")
script = ExtResource("3_xun6q")

[node name="MazeGen" type="Node3D" parent="Map/NavigationRegion3D"]
script = ExtResource("13_hprkg")

[node name="Spawns" type="Node3D" parent="Map"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="BlackScreen" type="ColorRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = -140.0
offset_top = -87.0
offset_right = 1300.0
offset_bottom = 757.0
color = Color(0, 0, 0, 1)

[node name="Crosshair" type="TextureRect" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_wvhx6")

[node name="FPSCounter" parent="UI" instance=ExtResource("8_3nm1p")]
visible = false
layout_mode = 1

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="."]
occluder = ExtResource("15_if7jw")
bake_mask = 4293918737

[connection signal="player_dead" from="Map/NavigationRegion3D/Player" to="." method="_on_player_player_dead"]
[connection signal="screen_shake" from="Map/NavigationRegion3D/Player" to="Map/NavigationRegion3D/Player/Head" method="_on_player_screen_shake"]
[connection signal="screen_shake" from="Map/NavigationRegion3D/Destroyer" to="Map/NavigationRegion3D/Player/Head" method="_on_destroyer_screen_shake"]
[connection signal="player_start" from="Map/NavigationRegion3D/MazeGen" to="Map/NavigationRegion3D/Player" method="_on_maze_gen_player_start"]
